sort.basic.bubble.AlgBubbleSort2.scala.error
Compilation error:
AlgBubbleSort2:11: error: not found: value compteur
        compteur=0
        ^AlgBubbleSort2:14: error: not found: value compteur
        compteur=compteur+1
        ^